deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-deployment
  namespace: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notes-app
  template:
    metadata:
      name: notes-pod
      labels:
        app: notes-app
    spec:
      containers:
      - name: nginx
        image: manviklittlemonster/dapo123:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: ebs-volume
          mountPath: /demo-data   # inside container
      volumes:
      - name: ebs-volume
        hostPath:
          path: /mnt/ebs                      # path on EC2 host
          type: DirectoryOrCreate
