staefulmysqlebs.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: db
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-ebs
          mountPath: /var/lib/mysql   # MySQL data directory
      volumes:
      - name: mysql-ebs
        hostPath:
          path: /mnt/ebs              # EBS mount on EC2 host
          type: DirectoryOrCreate
